fixed audio player z-index problem

--- a/css/style.css
+++ b/css/style.css
@@ -69,6 +69,7 @@ hr {
   margin-left: 14px;
 	position: fixed;
   width: 100%;
+	z-index: 69;
 }
 
 .kc {
